spring-petclinic-api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  rules:
    - host: hello-world1.info
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-gateway
              port:
                number: 8080
